0.20.5
    Update to killbill-oss-parent 0.140.15

0.20.4
    queue: add missing setters in ModelDao (performance)
    Update to killbill-oss-parent 0.140.13

0.20.3
    Add indexes for historical queries on queues
    Switch to streaming APIs for all queues searches
    MySQL embeddeddb compatibility with recent MariaDB Connector/J client

0.20.2
    Add queue apis for historical entries

0.20.1
    Add system property to didable XML validation

0.20
    automaton: ensure at least one enteringState transition is available

0.19
    Move embedded DBs to test-jars

0.18
    Update with latest HA branch

0.17
    0.15.1 merge for 0.17.x
    Update to killbill-oss-parent 0.103

0.16
    Update commons to 0.16 for KB release 0.17

0.15.2
    Fix inheritance bug in WithProfilingThreadPoolExecutor

0.15.1
    Make MemoryGlobalLocker re-entrant
    Update to killbill-oss-parent 0.94.1

0.15
    Enhance/simplify EmbeddedDB (testing using connection pooling)

0.14
    Fixed InMemoryPersistentBus implementation to correctly throw errors (instaed of swallowing them into guava)

0.13
    Set default value of 100 for notification queue capacity
    Make MemoryGlobalLocker sleep between retries
    Update to killbill-oss-parent 0.82

0.12
    Implement a BlockingRejectionExecutionHandler for the notificationQ

0.11
    update to latest org.mariadb.jdbc.MySQLDataSource
    Add DAO profiling data for queue

0.10
    Fixed issue in metrics

0.9
    Metrics work (Enhance @TimedResource annotation to include more info)

0.8
    Change WithProfilingThreadPoolExecutor to extend DynamicThreadPoolExecutorWithLoggingOnExceptions instead of raw ThreadPoolExecutor

0.7
    Fix issue with notification error count computation

0.6
    Add ability for GlobalLock to be reentrant

0.5
    Rework PersistentBus and NotificationQ dispatching

0.4
    PostgreSQL support
    Update to killbill-oss-parent 0.29
    Update default queue properties

0.3
    Remove BoneCP support